--- a/style.css
+++ b/style.css
@@ -1,7 +1,12 @@
-.bar-chart-1 {
-    background-color: #C7D9D9;
+.chart1 div {
+    font: 10px sans-serif;
+    background-color: red;
+    text-align: right;
+    padding: 3px;
+    margin: 1px;
+    color: white;
 }
-
-.bar-chart-2 {
+  
+.bar-chart-1 {
     background-color: #C7D9D9;
 }
