--- a/style.css
+++ b/style.css
@@ -1,12 +1,3 @@
-.chart1 div {
-    font: 10px sans-serif;
-    background-color: red;
-    text-align: right;
-    padding: 3px;
-    margin: 1px;
-    color: white;
-}
-  
-.bar-chart-1 {
-    background-color: #C7D9D9;
+.line-chart {
+    border: 1px solid lightgray;
 }
