--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
-.line-chart {
-    border: 1px solid lightgray;
+.line-chart, .line-chart-2 {
+    border: 1px solid green;
 }
 
 .line-chart-1 {
-    border: 1px solid black;
+    border: 1px solid red;
 }
